[gd_scene load_steps=4 format=3]

[ext_resource type="Theme" path="res://themes/rpg_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/2d/guild_counter.gd" id="2_script"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.878, 0.910, 0.941, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.753, 0.816, 0.878, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[node name="GuildCounter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478, 0.722, 0.878, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="ListPanel" type="PanelContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("panel_style")

[node name="DetailPanel" type="PanelContainer" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("panel_style")

[node name="HintLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.816, 0.847, 0.878, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
